<resources>
    <string name="app_name">CriminalIntentLaptop</string>
    <string name="crime_title">Title</string>
    <string name="solved">Solved</string>
    <string name="enter_a_title">Enter a title</string>
    <string name="details_crime">Details</string>
    <string name="police_button">Call to police</string>
    <string name="new_crime">New crime</string>
    <string name="list_is_empty">List is empty.</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="call_to_suspect">Call to suspect</string>
    <string name="crime_photo_button_description" translatable="false">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description" translatable="false">Crime scene photo (not set)</string>
    <string name="crime_photo_image_description" translatable="false">Crime scene photo (set)</string>
</resources>